wetty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wetty
  namespace: wetty
spec:
  selector:
    app: wetty
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
