wetty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wetty
  namespace: wetty
spec:
  ingressClassName: traefik
  rules:
    - host: ssh.yashbhangale.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wetty
                port:
                  number: 3000
